--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,45 @@
+asttokens==3.0.0
+cassandra-driver==3.29.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+comm==0.2.2
 confluent-kafka==2.8.2
+debugpy==1.8.13
+decorator==5.2.1
+dnspython==2.7.0
+executing==2.2.0
+geomet==0.2.1.post1
 idna==3.10
+ipykernel==6.29.5
+ipython==9.0.1
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+packaging==24.2
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py4j==0.10.9.7
+Pygments==2.19.1
+pymango==0.1.1
+pymongo==4.11.2
 pyspark==3.5.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 PyYAML==6.0.2
+pyzmq==26.2.1
 requests==2.32.3
+six==1.17.0
+stack-data==0.6.3
+tornado==6.4.2
+traitlets==5.14.3
 urllib3==2.3.0
+wcwidth==0.2.13
